--- a/BestRestaurants/Views/Cuisine/Delete.cshtml
+++ b/BestRestaurants/Views/Cuisine/Delete.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category
+@model BestRestaurants.Models.Cuisine
 
 <h2>Are you sure you want to delete this?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
+@Html.DisplayNameFor(model => model.CuisineName): @Html.DisplayFor(model => model.CuisineName)
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
