--- a/BestRestaurants/Views/Cuisine/Details.cshtml
+++ b/BestRestaurants/Views/Cuisine/Details.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category
+@model BestRestaurants.Models.Cuisine
 
 <h2>Category Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
-<p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
-<p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
+<h3>@Html.DisplayNameFor(model => model.CuisineName): @Html.DisplayFor(model => model.CuisineName)<h3>
+<p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CuisineId })</p>
+<p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CuisineId })</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
