--- a/BestRestaurants/Views/Cuisine/Edit.cshtml
+++ b/BestRestaurants/Views/Cuisine/Edit.cshtml
@@ -2,18 +2,18 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category
+@model BestRestaurants.Models.Cuisine
 
 <h2>Edit</h2>
 
-<h4>Edit this category: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Edit this category: @Html.DisplayFor(model => model.CuisineName)</h4>
 
 @using (Html.BeginForm())
 {
-  @Html.HiddenFor(model => model.CategoryId)
+  @Html.HiddenFor(model => model.CuisineId)
 
-  @Html.LabelFor(model => model.Name)
-  @Html.EditorFor(model => model.Name)
+  @Html.LabelFor(model => model.CuisineName)
+  @Html.EditorFor(model => model.CuisineName)
 
   <input type="submit" value="Save" />
 }
