--- a/BestRestaurants/Views/Cuisine/Index.cshtml
+++ b/BestRestaurants/Views/Cuisine/Index.cshtml
@@ -2,21 +2,22 @@
   Layout = "_Layout";
 }
 
-@using ToDoList.Models;
+@using BestRestaurants.Models;
+@model List<BestRestaurants.Models.Cuisine>;
 
-<h1>Categories</h1>
+<h1>Cuisines</h1>
 
 @if (@Model.Count == 0)
 {
-  <h3>No categories have been added yet!</h3>
+  <h3>No cuisines have been added yet!</h3>
 } 
 
 <ul>
-  @foreach(Category category in Model)
+  @foreach(Cuisine cuisine in Model)
   {
-    <li>@Html.ActionLink($"{category.Name}", "Details", new { id = category.CategoryId })</li>
+    <li>@Html.ActionLink($"{cuisine.CuisineName}", "Details", new { id = cuisine.CuisineId }) | @cuisine.CuisineId</li>
   }
 </ul>
 
-<p>@Html.ActionLink("Add new category", "Create")</p>
+<p>@Html.ActionLink("Add a new cuisine", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
