--- a/BestRestaurants/Views/Home/Index.cshtml
+++ b/BestRestaurants/Views/Home/Index.cshtml
@@ -4,4 +4,4 @@
 
 <h1>Restaurants!</h1>
 <p>@Html.ActionLink("See all restaurants", "Index", "Restaurants")</p> 
-<p>@Html.ActionLink("See all cusines", "Index", "Cusines")</p>
+<p>@Html.ActionLink("See all Cuisines", "Index", "Cuisine")</p>
