--- a/BestRestaurants/Views/Restaurants/Details.cshtml
+++ b/BestRestaurants/Views/Restaurants/Details.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model BestRestaurants.Models.Restaurant
 
-<h2>Item Details</h2>
+<h2>Restaurant Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)<h3>
-<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.ItemId })</p>
-<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.ItemId })</p>
+<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
+<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.RestaurantId })</p>
+<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.RestaurantId })</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
