--- a/BestRestaurants/Views/Restaurants/Edit.cshtml
+++ b/BestRestaurants/Views/Restaurants/Edit.cshtml
@@ -2,21 +2,30 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model BestRestaurants.Models.Restaurant
 
 <h2>Edit</h2>
 
-<h4>Edit this task: @Html.DisplayFor(model => model.Description)</h4>
+<h4>Edit this Restaurant: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
-  @Html.HiddenFor(model => model.ItemId)
+  @Html.HiddenFor(model => model.RestaurantId)
+
+  @Html.LabelFor(model => model.Name)
+  @Html.EditorFor(model => model.Name)
 
   @Html.LabelFor(model => model.Description)
   @Html.EditorFor(model => model.Description)
 
-  @Html.LabelFor(model => model.Category)
-  @Html.DropDownList("CategoryId")
+  @Html.LabelFor(model => model.Location)
+  @Html.EditorFor(model => model.Location)
+
+  @Html.LabelFor(model => model.PriceRange)
+  @Html.EditorFor(model => model.PriceRange)
+
+  @Html.LabelFor(model => model.Cuisine)
+  @Html.DropDownList("CuisineId")
 
   <input type="submit" value="Save" />
 }
