--- a/BestRestaurants/Views/Restaurants/Index.cshtml
+++ b/BestRestaurants/Views/Restaurants/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 @using BestRestaurants.Models;
-@model List<BestRestaurants.Models.Item>;
+@model List<BestRestaurants.Models.Restaurant>;
 
 <h1>Items</h1>
 
@@ -14,7 +14,15 @@
 
 @foreach (Restaurant restaurant in Model)
 {
-  <li>@Html.ActionLink($"{restaurant.Description}", "Details", new { id = restaurant.RestaurantId }) | @restaurant.Cuisine.CuisineName</li>
+  <li>@Html.ActionLink($"{restaurant.Name}", "Details", new { id = restaurant.RestaurantId }) | @restaurant.Cuisine.CuisineName</li>
 }
 
 <p>@Html.ActionLink("Add new restaurant", "Create")</p>
+<p>@Html.ActionLink("Return Home", "Index", "Home")</p>
+
+<h3>Search by Cuisine type: </h3>
+@using (Html.BeginForm("Search", "Restaurants", FormMethod.Get))
+{
+  @Html.DropDownList("CuisineId")
+  <input type="submit" value="search"/>
+}
