--- a/BestRestaurants/Views/Restaurants/Index.cshtml
+++ b/BestRestaurants/Views/Restaurants/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 @using BestRestaurants.Models;
-@model List<BestRestaurants.Models.Restaurant>;
 
-<h1>Items</h1>
+
+<h1>All Restaurants</h1>
 
 @if (@Model.Count == 0)
 {
@@ -21,7 +21,7 @@
 <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
 
 <h3>Search by Cuisine type: </h3>
-@using (Html.BeginForm("Search", "Restaurants", FormMethod.Get))
+@using (Html.BeginForm("Search", "Restaurants"))
 {
   @Html.DropDownList("CuisineId")
   <input type="submit" value="search"/>
