--- a/BestRestaurants/Views/Restaurants/Search.cshtml
+++ b/BestRestaurants/Views/Restaurants/Search.cshtml
@@ -3,9 +3,9 @@
 }
 
 @using BestRestaurants.Models;
-@model List<BestRestaurants.Models.Restaurant>;
 
-<h1>hello</h1>
+<h1>Restaurants with selected cuisine type:</h1>
+
 @if (@Model.Count == 0)
 {
   <h3>No restaurants!</h3>
@@ -13,7 +13,7 @@
 
 @foreach (Restaurant restaurant in Model)
 {
-  <li>@Html.ActionLink($"{restaurant.Name}", "Details", new { id = restaurant.RestaurantId })</li>
+  <li>@Html.ActionLink($"{restaurant.Name}", "Details", "Restaurants", new { id = restaurant.RestaurantId })</li>
 }
 
 <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
