--- a/BestRestaurants/Views/Restaurants/Index.cshtml
+++ b/BestRestaurants/Views/Restaurants/Index.cshtml
@@ -5,6 +5,8 @@
 @using BestRestaurants.Models;
 
 
+
+
 <h1>All Restaurants</h1>
 
 @if (@Model.Count == 0)
@@ -21,7 +23,7 @@
 <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
 
 <h3>Search by Cuisine type: </h3>
-@using (Html.BeginForm("Search", "Restaurants"))
+@using (Html.BeginForm("Search", "Restaurants", FormMethod.Get))
 {
   @Html.DropDownList("CuisineId")
   <input type="submit" value="search"/>
